# fastapi-shop

./: alembic.ini  pyproject.toml  setup.py
src/: web.py
src/core/config/: settings.py
src/domain/customer/: commands.py  entities.py  errors.py  services.py
src/infrastructure/postgresql/: database.py
src/infrastructure/postgresql/models/: customer.py
src/services/: customer.py
